Remove nupkg dir

--- a/find-env/find-env.csproj
+++ b/find-env/find-env.csproj
@@ -13,4 +13,10 @@
     <PackageOutputPath>./nupkg</PackageOutputPath>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="nupkg\**" />
+    <EmbeddedResource Remove="nupkg\**" />
+    <None Remove="nupkg\**" />
+  </ItemGroup>
+
 </Project>
